# cloudflare-DDNS

./: .codeclimate.yml  .coveragerc  .gitignore  .pypyirc  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  Update.py  cli.py  cloudflareddns.py  cloudflareddns.service.example  gen_settings.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
cloudflare-ddns/: cloudflareddns.py
cloudflare_ddns/: Exceptions.py  __init__.py  cli.py  cloudflare.py  cloudflareddns.py  gen_settings.py  internals.py  utils.py  verify.py
cloudflare_ddns/tests/: nosetest.py
docs/: cli.html  cloudflareddns.html  conf.py  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  verify.html
docs/_build/doctrees/: cloudflareddns.doctree  environment.pickle  modules.doctree
docs/_sources/: cloudflareddns.rst.txt  index.rst.txt  internals.rst.txt  modules.rst.txt
docs_prebuilt/doctrees/: index.doctree
docs_prebuilt/html/: .buildinfo
simple_cloudflare_ddns.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
source/: Makefile  conf.py
source/_build/doctrees/: cli.doctree  cloudflareddns.doctree  environment.pickle  gen_settings.doctree  index.doctree  internals.doctree  modules.doctree  verify.doctree
source/_build/html/: .buildinfo  cli.html  cloudflareddns.html  gen_settings.html  genindex.html  index.html  internals.html  modules.html  objects.inv  py-modindex.html  searchindex.js  verify.html
source/_build/pickle/: cli.fpickle  cloudflareddns.fpickle  (+12 more)
(+4 files in other folders)
